# Translatium

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.py  test.py
.github/workflows/: artifact.yml  publish.yml
docs/: developer.md  endpoints.md  index.md  install.md
docs/developer/: developer.md
docs/usage/: Automatic_Reference.md  endpoints.md  examples.md  install.md  manual_reference.md
locales/: de_CH.yaml
src/translatium/: __init__.py  config.py  errors.py  i18n.py  translatium.py  utils.py
src/translatium/helpers/: file_io.py  utils.py
src/translatium/i18n/: config.py  core.py  strings.py
tests/: test.py
tests/locales/: de_CH.yaml  de_DE.yaml  en_US.yaml
