[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "translatium"
version = "0.0.2"
authors = [
    {name = "Louis Zimmermann", email = "louis-github@tutanota.com"},
]
description = "A pure Python i18n library for your Python projects."
readme = "README.md"
#requires-python = ">=3.8"
keywords = ["i18n", "l10n", "translation", "localization", "internationalization"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml",
    "typeguard",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[project.urls]
"Source Code" = "https://github.com/CEOXeon/Translatium"
Changelog = "https://github.com/CEOXeon/Translatium/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests/test.py", "tests/test_translation.py"]
addopts = ["--cov=translatium", "--cov-report=term-missing", "-v"]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # Error (Style-related, e.g., missing whitespace)
    "F",   # Pyflakes (Unused imports, code errors)
    "W",   # Warning (Pep8 violations)
    "I",   # Isort (Import sorting)
    "UP",  # Pyupgrade (Syntax upgrades for target-version)
    "B",   # Bugbear (Common design pitfalls)
    "A",   # Flake8-builtins (Shadowing built-ins)
    "ISC", # Flake8-implicit-str-concat
    "N",   # Pep8-naming (Variable and function names)
    "D",   # Pydocstyle (Docstring checks)
    "TID", # Typing-related rules (e.g., flake8-tidy-imports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
